@@ -1,3 +1,8 @@
+2017-03-24 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-loader-file-byte-compile): Correct
+	pushing to ´load-path' all installed packages.
+
 2013-08-31 Sat  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-cmd-sources-list-upgrade): Add
